fix: broken layout

--- a/slides/day-two/style.css
+++ b/slides/day-two/style.css
@@ -7,3 +7,7 @@ ol {
     list-style: decimal;
     padding-left: 1.25em;
 }
+
+#slideshow {
+    position: relative;
+}
